Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-123083

tst_QProcess::setChildProcessModifier fails in dev

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P0: Blocker P0: Blocker
    • 6.7.0 RC, 6.7.0, 6.8.0 FF
    • 6.8
    • Core: I/O
    • None
    • Linux/X11
    • 418dcf88f (dev), 2b13207c2 (6.7), 0f56502fb (dev), b444ae399 (6.7.0), a2d67a267 (6.7), 0df3ff3d7 (6.7.0)

      https://codereview.qt-project.org/c/qt/qtbase/+/545800/3#message-87f49666adfb4efa7685da1270d34c7281ee247b

      https://testresults.qt.io/coin/integration/qt/qtbase/tasks/1709805833

      https://testresults.qt.io/coin/log/qt/qtbase/1320b4c015e2e3cc3f7de8ab7bee1c0933936e91/LinuxopenSUSE_15_5x86_64LinuxopenSUSE_15_5x86_64GCCqtci-linux-openSUSE-15.5-x86_64-52-1c6e67Sccache_UseAddressSanitizer_UseConfigure_WarningsAreErrors/cd6f51f6d17c172f5e3b81982ce51fd5216dc662/test_1709807037

      agent:2024/03/07 10:49:56 build.go:404: FAIL!  : tst_QProcess::setChildProcessModifier(normal) 'process.waitForFinished(5000)' returned FALSE. (Process operation timed out)
      agent:2024/03/07 10:49:56 build.go:404:    Loc: [/home/qt/work/qt/qtbase/tests/auto/corelib/io/qprocess/tst_qprocess.cpp(1524)]
      agent:2024/03/07 10:49:56 build.go:404: QWARN  : tst_QProcess::setChildProcessModifier(normal) QProcess: Destroyed while process ("testProcessNormal/testProcessNormal") is still running.
      agent:2024/03/07 10:49:56 build.go:404: PASS   : tst_QProcess::setChildProcessModifier(detached)
      agent:2024/03/07 10:49:56 build.go:404:          failChildProcessModifier function time: 300000ms, total time: 352056ms
      

        1. trace.tar.gz
          438 kB
          Alexey Edelev
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            thiago Thiago Macieira
            alexandru.croitor Alexandru Croitor
            Votes:
            0 Vote for this issue
            Watchers:
            11 Start watching this issue

              Created:
              Updated:
              Resolved: